--- a/ccs/estilo.css
+++ b/ccs/estilo.css
@@ -1,8 +1,22 @@
 body
 {
-    color: indianred;
+    color: grey;
     text-align: center;
     font-family: "Arial";
+    font-size: 100px;
+    margin: 0;
+    padding: 0;
+}
+#container 
+{
+    width: 70 %;
+    padding: len;
+    text-align: left;
+    border: 1 px solid #000;
+    margin: 0 auto;
+}
 
-
+#container h1
+{
+    font-size: 20px;
 }
