--- a/ccs/estilo.css
+++ b/ccs/estilo.css
@@ -1,18 +1,18 @@
 body
 {
-    color: grey;
+    color: #333;
     text-align: center;
     font-family: "Arial";
-    font-size: 100px;
+    font-size: 16px;
     margin: 0;
     padding: 0;
 }
-#container 
+#container
 {
-    width: 70 %;
-    padding: len;
+    width: 70%;
+    padding: 1em;
     text-align: left;
-    border: 1 px solid #000;
+    border: 1px solid #DDD;
     margin: 0 auto;
 }
 
