--- a/ccs/estilo.css
+++ b/ccs/estilo.css
@@ -17,6 +17,7 @@ body
     padding: 0.5em;
 }
 
+
 #cabecera #tagline
 {
     padding: 0 0 0 1em;
@@ -36,4 +37,16 @@ body
 #container h1
 {
     font-size: 20px;
+}
+#post
+{
+    background: white;
+    padding: 1em;
+}
+#footer
+{
+    background: #777;
+    color: white;
+    text-align: center;
+
 }
